# FastAPI-ReactJS

./: .env-example  .gitignore  README.md  database.db  main.py  pyproject.toml
backend/: db.py  settings.py  urls.py
backend/apps/auth/: cookies.py  models.py  permissions.py  routers.py  schemas.py  security.py
backend/apps/chat/: manager.py  routers.py
backend/static/: asset-manifest.json  index.html
backend/static/static/css/: main.965cf83c.chunk.css  main.965cf83c.chunk.css.map  main.cdd44984.chunk.css  main.cdd44984.chunk.css.map
backend/static/static/js/: 2.3072bb78.chunk.js  2.3072bb78.chunk.js.map  2.6c173c1f.chunk.js  2.6c173c1f.chunk.js.map  main.17819c1b.chunk.js  main.17819c1b.chunk.js.map  main.7c72c8c3.chunk.js  main.7c72c8c3.chunk.js.map  runtime-main.12ccf03d.js  runtime-main.12ccf03d.js.map  runtime-main.a2f9b214.js  runtime-main.a2f9b214.js.map
backend/util/: generic.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/common/: Alert.js  CurrentUser.js  DropDown.js  Loading.js  Modal.js  axios.js
frontend/src/components/context/: auth.js
frontend/src/components/router/: index.js  secureRouter.js
frontend/src/components/view/: Dashboard.js  Donate.js  DropDown.js  Header.js  Home.js  Team.js
frontend/src/components/view/auth/: ForgotPassword.js  Login.js  Register.js  ResetPassword.js
frontend/src/components/view/chat/: ChatInput.js  ChatMessage.js  ChatSearch.js  ChatSidebar.js  (+2 more)
frontend/src/styles/: index.css  loading.css
(+1 files in other folders)
